
Jargon-core consists of the following libraries

* jargon-core - base libraries, implementation of the iRODS protocol
* jargon-data-utils - additional functionality for dealing with iRODS data, such as building trees, storing information in iRODS on behalf of applications, and doing diffs between local and iRODS
* jargon-security - code for use with Spring security
* jargon-user-tagging - code for using free tagging and other metadata metaphors on top of iRODS
* jargon-transfer - transfer manager for managing and synchronizing data with iRODS
* jargon-ticket - support for ticket processing
* jargon-httpstream - stream http content into iRODS via Jargon


==Requirements==

*Jargon depends on Java 1.6+
*Jargon is built using Apache Maven2, see POM for dependencies
*Jargon supports iRODS 2.5 through iRODS 3.3

==Libraries==

Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]

==Bug Fixes==

*[#1606] inconsistent objstat semantics for mounted collections
**Added an overhead to this iRODS bug where an objStat for a file in a mounted collecton always returns an objStat even if the file exists.  This is filed under iRODS, but the force overwrite logic was changed in a bug overhead to always use force when putting to a mounted collection, and we'll wait for an iRODS fix.

[#1635] ttl parameter in PAM missing
**Fix PAM login errors on iRODS 3.3 due to addition of timeToLive parameter

*[#1726] need to add back flushes for 3.2 compatability
**add a force.pam.flush jargon property for pre 3.3 servers

==Features==

*[#605] add mso object support
**CollectionAndDataObjectListAndSearchAO now supports mounted collection types

*[#1182] add support for workflows
**Added jargon-workflow library and initial support for workflow objects
